fix remaining compiler issues!! 🎉🎉🎉